syntax = "proto3";

option java_package = "org.sorapointa.proto";

message DateTimeDelete {
	
}
